--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "exceljs": "^4.3.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
     "lodash": "^4.17.21",
+    "node-telegram-bot-api": "^0.61.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
